Refine UI, assets, and lightbox

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       body {
         background-color: #FFFFFF;
         color: #111111;
+        overflow-x: hidden;
       }
       /* Custom scrollbar for editorial feel */
       ::-webkit-scrollbar {
@@ -54,6 +55,13 @@
       .material-icons.md-36 { font-size: 36px; }
       .material-icons.md-48 { font-size: 48px; }
       .material-icons.md-64 { font-size: 64px; }
+      .no-scrollbar {
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+      }
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
     </style>
   <script type="importmap">
 {
