--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coletivo Pilates | Florianópolis</title>
+    <meta name="description" content="Coletivo Pilates em Florianópolis, SC. Estúdio no Córrego Grande com Pilates clássico, aulas particulares, em grupo e mentoria profissional." />
+    <link rel="canonical" href="https://bolivaralencastro.github.io/coletivo-pilates/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Coletivo Pilates | Florianópolis" />
+    <meta property="og:description" content="Estúdio de Pilates clássico no Córrego Grande, Florianópolis. Aulas individuais, em grupo e mentoria profissional." />
+    <meta property="og:url" content="https://bolivaralencastro.github.io/coletivo-pilates/" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-home-coletivo-pilates-1200x630.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Coletivo Pilates" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Coletivo Pilates | Florianópolis" />
+    <meta name="twitter:description" content="Estúdio de Pilates clássico no Córrego Grande, Florianópolis. Aulas individuais, em grupo e mentoria profissional." />
+    <meta name="twitter:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-home-coletivo-pilates-1200x630.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
