Update OG assets and generator

--- a/index.html
+++ b/index.html
@@ -5,20 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coletivo Pilates | Florianópolis</title>
     <meta name="description" content="Coletivo Pilates em Florianópolis, SC. Estúdio no Córrego Grande com Pilates clássico, aulas particulares, em grupo e mentoria profissional." />
+    <meta name="keywords" content="pilates classico, pilates florianopolis, estudio de pilates, corrego grande, pilates individual, pilates em grupo, mentoria pilates" />
+    <meta name="author" content="Coletivo Pilates" />
     <link rel="canonical" href="https://bolivaralencastro.github.io/coletivo-pilates/" />
+    <meta name="image" property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1200x630.png" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Coletivo Pilates | Florianópolis" />
     <meta property="og:description" content="Estúdio de Pilates clássico no Córrego Grande, Florianópolis. Aulas individuais, em grupo e mentoria profissional." />
     <meta property="og:url" content="https://bolivaralencastro.github.io/coletivo-pilates/" />
-    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-home-coletivo-pilates-1200x630.png" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1200x630.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1200x630.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1200x627.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1200x627.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1024x512.png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1024x512.webp" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1000x1500.png" />
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="1500" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1000x1500.webp" />
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="1500" />
+    <meta property="og:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="og:image:type" content="image/webp" />
     <meta property="og:site_name" content="Coletivo Pilates" />
     <meta property="og:locale" content="pt_BR" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://bolivaralencastro.github.io/coletivo-pilates/" />
     <meta name="twitter:title" content="Coletivo Pilates | Florianópolis" />
     <meta name="twitter:description" content="Estúdio de Pilates clássico no Córrego Grande, Florianópolis. Aulas individuais, em grupo e mentoria profissional." />
-    <meta name="twitter:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-home-coletivo-pilates-1200x630.png" />
+    <meta name="twitter:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-coletivo-pilates-1024x512.png" />
+    <meta name="twitter:image:alt" content="Coletivo Pilates em Florianópolis - equipe e estúdio" />
+    <meta property="pinterest:image" content="https://bolivaralencastro.github.io/coletivo-pilates/og/og-image-pinterest-1000x1500.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
